--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="home">
-  <h2>login</h2>
-  <app-login></app-login>
-</div>
+<app-nav-bar></app-nav-bar>
+
+<!-- routerview  -->
+<router-outlet></router-outlet>
