--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -1,1 +1,7 @@
-<p>home-page works!</p>
+
+
+
+ <!-- full screen with h1 centralised -->
+ <div class="flex flex-col items-center justify-center h-screen">
+    <h1 class="text-3xl font-bold text-gray-800 uppercase dark:text-white">Welcome to the DocGestionnaire 👋</h1>
+</div>
